fix: wsl cancelled

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,31 +22,31 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
-  wsl:
-    # The type of runner that the job will run on
+  # wsl:
+  #   # The type of runner that the job will run on
 
-    runs-on: windows-2019
-    defaults:
-      run:
-        shell: wsl-bash {0}
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Runs a single command using the runners shell
-    - uses: Vampire/setup-wsl@v1
-      with:
-        distribution: Ubuntu-20.04
-        # additional-packages:
-        #   ansible
+  #   runs-on: windows-2019
+  #   defaults:
+  #     run:
+  #       shell: wsl-bash {0}
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #   # Runs a single command using the runners shell
+  #   - uses: Vampire/setup-wsl@v1
+  #     with:
+  #       distribution: Ubuntu-20.04
+  #       # additional-packages:
+  #       #   ansible
 
-    - name: Remove pre-installed node
-      run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm && sudo rm -rf /usr/local/bin/n
-    - name: Install ansible
-      run: apt-get install ansible
-    - name: Run ansible
-      run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
+  #   - name: Remove pre-installed node
+  #     run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm && sudo rm -rf /usr/local/bin/n
+  #   - name: Install ansible
+  #     run: apt-get install ansible
+  #   - name: Run ansible
+  #     run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
 
   ubuntu:
-    needs: wsl
+    # needs: wsl
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
 
