fix: local connection added

--- a/local.yml
+++ b/local.yml
@@ -1,4 +1,5 @@
 - hosts: localhost
+  connection: local
   vars:
     # source_key: "./.ssh/id_rsa"
     dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
