--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -66,6 +66,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest-stable
+
     - name: Install ansible
       run: brew install ansible
     - name: Remove pre-installed node
