--- a/tasks/neovim.yml
+++ b/tasks/neovim.yml
@@ -17,13 +17,17 @@
     - neovim
     - ubuntu
 
-# - name: Install neovim
-#   community.general.homebrew:
-#     name: neovim
-#   tags:
-#     - install
-#     - neovim
-#     - macos
+- name: Tap Homebrew repositories
+  homebrew_tap:
+    name: "neovim/neovim"
+
+- name: Install neovim
+  community.general.homebrew:
+    name: neovim
+  tags:
+    - install
+    - neovim
+    - macos
 
 
 
@@ -66,8 +70,9 @@
 #     - install
 #     - neovim
 - name: Install Vim-Plug
-  shell: sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+  shell: curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
   tags:
     - install
     - neovim
     - vim
+    - ubuntu
