--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -58,21 +58,21 @@ jobs:
     - name: Run ansible
       run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
 
-  macos:
-    needs: ubuntu
-    # The type of runner that the job will run on
-    runs-on: macos-latest
+  # macos:
+  #   needs: ubuntu
+  #   # The type of runner that the job will run on
+  #   runs-on: macos-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Runs a single command using the runners shell
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: latest-stable
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #   # Runs a single command using the runners shell
+  #   - uses: maxim-lobanov/setup-xcode@v1
+  #     with:
+  #       xcode-version: latest-stable
 
-    - name: Install ansible
-      run: brew install ansible
-    - name: Remove pre-installed node
-      run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm && sudo rm -rf /usr/local/bin/n
-    - name: Run ansible
-      run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags ubuntu
+  #   - name: Install ansible
+  #     run: brew install ansible
+  #   - name: Remove pre-installed node
+  #     run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm && sudo rm -rf /usr/local/bin/n
+  #   - name: Run ansible
+  #     run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags ubuntu
