fix: independent pushes

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -58,7 +58,7 @@ on:
       run: ansible-pull -U https://github.com/rdandnayak/ansible.git --skip-tags macos
 
   macos:
-    needs: ubuntu
+    # needs: ubuntu
     # The type of runner that the job will run on
     runs-on: macos-latest
 
