--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,7 +20,8 @@ on:
         required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-
+jobs:
+  # This workflow contains a single job called "greet"
   wsl:
     # The type of runner that the job will run on
 
