--- a/tasks/node.yml
+++ b/tasks/node.yml
@@ -41,18 +41,14 @@
 
 
 - name: Clean WSL path
-  shell: export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games && source ~/.zshrc
+  shell: echo 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games' >> ~/.bashrc
   when: not n_global.stat.exists
-  args:
-    executable: /bin/zsh
   tags:
     - wsl
 
 - name: Install n
-  shell: source ~/.zshrc && curl -L https://git.io/n-install | bash -s -- -y 14.18.2
+  shell: curl -L https://git.io/n-install | bash -s -- -y 14.18.2
   when: not n_global.stat.exists
-  args:
-    executable: /bin/zsh
   tags:
     - install
     - node
