--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -76,8 +76,8 @@ jobs:
       with:
         xcode-version: latest-stable
 
-    - name: Install PiP
-      run: curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python get-pip.py --user
+    # - name: Install PiP
+    #   run: curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python get-pip.py --user
     - name: Install PiP
       run: python -m pip install --user ansible
     - name: Remove pre-installed node
