--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -79,7 +79,7 @@ jobs:
     # - name: Install PiP
     #   run: curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python get-pip.py --user
     - name: Install PiP
-      run: python -m pip install --user ansible
+      run: sudo python -m pip install ansible
     - name: Remove pre-installed node
       run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm && sudo rm -rf /usr/local/bin/n
     - name: Run ansible
