--- a/tasks/node.yml
+++ b/tasks/node.yml
@@ -78,9 +78,11 @@
 - include: tasks/source.yml
 
 - name: Set global config prefix
-  shell: npm config set prefix $NPM_CONFIG_PREFIX
+  become: false
+  become_user: "{{ lookup('env', 'USER') }}"
+  shell: source ~/.zshrc && npm config set prefix $NPM_CONFIG_PREFIX
   args:
-    executable: ~/n/bin/npm
+    executable: /bin/zsh
   tags:
     - install
     - node
