fix: review comment

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,7 +39,7 @@ jobs:
         #   ansible
 
     - name: Setup path
-      run: echo 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games' >> ~/.bashrc
+      run: echo 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games' >> ~/.zshrc
     - name: Remove pre-installed node
       run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm
     - name: Install ansible repo
@@ -76,8 +76,6 @@ jobs:
       with:
         xcode-version: latest-stable
 
-    # - name: Install PiP
-    #   run: curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python get-pip.py --user
     - name: Install brew
       run: brew update && brew upgrade && brew install ansible && brew upgrade ansible
     - name: Remove pre-installed node
