fix: fix change path

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,10 +38,10 @@ jobs:
         # additional-packages:
         #   ansible
 
-    - name: Setup path
-      run: echo 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games' >> ~/.zshrc
-    - name: Remove pre-installed node
-      run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm
+    # - name: Setup path
+    #   run: echo 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games' >> ~/.zshrc
+    # - name: Remove pre-installed node
+    #   run: rm -rf /usr/local/bin/node rm && sudo rm -rf /usr/local/bin/npm
     - name: Install ansible repo
       run: apt-add-repository -y ppa:ansible/ansible
     - name: Fix path variable
