--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -5,6 +5,8 @@
     - python
 - name: Install Python 3.9
   shell: source ~/.zshrc && pyenv install 3.9
+  args:
+    executable: /bin/zsh
   tags:
     - install
     - python
