--- a/local.yml
+++ b/local.yml
@@ -53,5 +53,5 @@
     # - include: tasks/ssh.yml
     - include: tasks/vim.yml
     - include: tasks/neovim.yml
-    - include: tasks/python.yml
+    # - include: tasks/python.yml
     - include: tasks/source.yml
