fix: sourcing is done automatically now

--- a/local.yml
+++ b/local.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   vars:
     # source_key: "./.ssh/id_rsa"
-    dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
+    # dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
   vars_prompt:
     - name: "user_name"
       prompt: "Enter your full name"
