--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -10,6 +10,7 @@
     - install
     - python
     - wsl
+    - ubuntu
 - name: Install Python 3.9
   shell: source ~/.zshrc && pyenv install 3.9.6
   args:
